--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # production
 /build
+build
 
 # misc
 .DS_Store
@@ -23,5 +24,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/.idea
+.idea
 client/.idea
