--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.23.0",
     "formik": "^2.2.9",
     "json-server": "^0.16.3",
+    "moon-backend": "file:..",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
